[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/UI/Canvas/Canvas.gd" type="Script" id=1]
[ext_resource path="res://src/UI/Canvas/Grid.gd" type="Script" id=2]
[ext_resource path="res://src/UI/Canvas/Indicators.gd" type="Script" id=3]
[ext_resource path="res://src/UI/Canvas/TileMode.gd" type="Script" id=4]
[ext_resource path="res://src/UI/Canvas/CurrentFrameDrawer.gd" type="Script" id=5]
[ext_resource path="res://src/UI/Canvas/PixelGrid.gd" type="Script" id=6]
[ext_resource path="res://src/UI/Canvas/Previews.gd" type="Script" id=7]
[ext_resource path="res://src/UI/Canvas/Selection.gd" type="Script" id=8]
[ext_resource path="res://src/Shaders/MarchingAntsOutline.shader" type="Shader" id=9]
[ext_resource path="res://src/Shaders/AutoInvertColors.shader" type="Shader" id=10]
[ext_resource path="res://src/UI/Canvas/OnionSkinning.gd" type="Script" id=12]

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 4

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 4

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 9 )
shader_param/first_color = Color( 1, 1, 1, 1 )
shader_param/second_color = Color( 0, 0, 0, 1 )
shader_param/animated = true
shader_param/width = 0.05
shader_param/frequency = 200.0
shader_param/stripe_direction = 0.5

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 10 )

[node name="Canvas" type="Node2D"]
script = ExtResource( 1 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
material = SubResource( 4 )
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 64, 64 )
transparent_bg = true
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="CurrentFrameDrawer" type="ColorRect" parent="ViewportContainer/Viewport"]
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMode" type="Node2D" parent="."]
material = SubResource( 1 )
script = ExtResource( 4 )

[node name="PixelGrid" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Grid" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Selection" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="MarchingAntsOutline" type="Sprite" parent="Selection"]
material = SubResource( 2 )
centered = false

[node name="Indicators" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Previews" type="Node2D" parent="."]
material = SubResource( 3 )
script = ExtResource( 7 )

[node name="OnionPast" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="OnionFuture" type="Node2D" parent="."]
script = ExtResource( 12 )
